# stockstock

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
config/: settings.yaml
scripts/: seed_historical.py  train_model.py
src/stockstock/: __main__.py  app.py  config.py  logging_config.py  utils.py
src/stockstock/broker/: account.py  client.py  market_data.py  orders.py  rate_limiter.py
src/stockstock/db/: models.py  repository.py
src/stockstock/macro/: __init__.py  fred_client.py  macro_score.py  market_data.py  sector_rotation.py
src/stockstock/notifications/: bot.py  messages.py
src/stockstock/scheduler/: jobs.py
src/stockstock/strategy/: __init__.py  backtest.py  features.py  model.py  risk.py  signals.py
tests/: conftest.py
tests/integration/: test_db_pipeline.py  test_macro_pipeline.py  test_ml_pipeline.py
tests/unit/: test_features.py  test_macro_features.py  test_macro_messages.py  test_macro_score.py  test_messages.py  test_rate_limiter.py  test_risk.py  test_sector_rotation.py  test_signals.py
